# cartpole

gradient_cartpole_handoff/: .gitignore  HANDOFF_PACKET.md  Makefile  README.md  ROADMAP.md  environment-aligator.yml  pyproject.toml  requirements-fddp.txt  requirements-mac.txt  requirements-pufferlib4.txt  requirements-sb3.txt
gradient_cartpole_handoff/adapters/: pufferlib_env.py
gradient_cartpole_handoff/benchmarks/: p1_capture_envelope.yaml
gradient_cartpole_handoff/configs/: debug6_fast.yaml  gradient6_curriculum.yaml  sweep_n.yaml  swingup6_capture_envelope.yaml  swingup6_capture_handoff.yaml  swingup6_capture_hybrid_policy.yaml  swingup6_capture_lqr_residual.yaml  swingup6_capture_sac_boundary.yaml  swingup6_capture_state_curriculum_lqr_init.yaml  swingup6_capture_state_list.yaml  swingup6_capture_state_list_shaped.yaml  swingup6_chain_state_list_shaped.yaml  swingup6_debug.yaml  swingup6_gradient_low_momentum.yaml  swingup6_policy_handoff_capture_shaped.yaml  swingup6_uniform.yaml  swingup6_uniform_low_momentum_finetune.yaml  swingup6_uniform_time_linear.yaml  swingup7_uniform.yaml  uniform6_capture_wide.yaml  uniform6_finetune.yaml  uniform6_near_upright_lqr.yaml
gradient_cartpole_handoff/docs/: evidence_runbook.md  experiment_protocol.md  pufferlib4_notes.md  results_log_template.md  swingup_gap.md  swingup_search_notes.md  troubleshooting.md  yacine_fairness_notes.md
gradient_cartpole_handoff/scripts/: analyze_capture_modal_failures.py  build_capture_supervisor_dataset.py  build_capture_target_teachers.py  build_feedback_mpc_teachers.py  evaluate.py  (+58 more)
(+36 files in other folders)
