[project]
name = "gradient-cartpole"
version = "0.1.0"
description = "n-link gradient curriculum cart-pole experiments with MuJoCo + MLX PPO"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
